// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="measure-details-header big-spacer-bottom"
>
  <div
    className="measure-details-primary"
  >
    <div
      className="measure-details-metric"
    >
      <IssueTypeIcon
        className="little-spacer-right text-text-bottom"
        query="reliability_rating"
      />
      Reliability Rating
      <span
        className="measure-details-value spacer-left"
      >
        <strong>
          <Measure
            metricKey="reliability_rating"
            metricType="RATING"
            value="3.0"
          />
        </strong>
      </span>
      <Tooltip
        overlay="component_measures.show_metric_history"
      >
        <ForwardRef(Link)
          className="js-show-history spacer-left button button-small"
          to={
            {
              "pathname": "/project/activity",
              "search": "?id=foo&graph=custom&custom_metrics=reliability_rating",
            }
          }
        >
          <HistoryIcon />
        </ForwardRef(Link)>
      </Tooltip>
    </div>
    <div
      className="measure-details-primary-actions"
    >
      <injectIntl(LeakPeriodLegend)
        className="spacer-left"
        component={
          {
            "key": "foo",
            "name": "Foo",
            "qualifier": "TRK",
          }
        }
        period={
          {
            "date": "2017-05-16T13:50:02+0200",
            "index": 1,
            "mode": "previous_version",
            "parameter": "6,4",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly for leak 1`] = `
<div
  className="measure-details-header big-spacer-bottom"
>
  <div
    className="measure-details-primary"
  >
    <div
      className="measure-details-metric"
    >
      <IssueTypeIcon
        className="little-spacer-right text-text-bottom"
        query="new_reliability_rating"
      />
      Reliability Rating on New Code
      <span
        className="measure-details-value spacer-left"
      >
        <strong>
          <Measure
            className="leak-box"
            metricKey="new_reliability_rating"
            metricType="RATING"
            value="3.0"
          />
        </strong>
      </span>
    </div>
    <div
      className="measure-details-primary-actions"
    >
      <injectIntl(LeakPeriodLegend)
        className="spacer-left"
        component={
          {
            "key": "foo",
            "name": "Foo",
            "qualifier": "TRK",
          }
        }
        period={
          {
            "date": "2017-05-16T13:50:02+0200",
            "index": 1,
            "mode": "previous_version",
            "parameter": "6,4",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render with a branch 1`] = `
<div
  className="measure-details-header big-spacer-bottom"
>
  <div
    className="measure-details-primary"
  >
    <div
      className="measure-details-metric"
    >
      <IssueTypeIcon
        className="little-spacer-right text-text-bottom"
        query="new_reliability_rating"
      />
      Reliability Rating on New Code
      <span
        className="measure-details-value spacer-left"
      >
        <strong>
          <Measure
            className="leak-box"
            metricKey="new_reliability_rating"
            metricType="RATING"
            value="3.0"
          />
        </strong>
      </span>
    </div>
    <div
      className="measure-details-primary-actions"
    >
      <injectIntl(LeakPeriodLegend)
        className="spacer-left"
        component={
          {
            "key": "foo",
            "name": "Foo",
            "qualifier": "TRK",
          }
        }
        period={
          {
            "date": "2017-05-16T13:50:02+0200",
            "index": 1,
            "mode": "previous_version",
            "parameter": "6,4",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should work with measure without value 1`] = `
<div
  className="measure-details-header big-spacer-bottom"
>
  <div
    className="measure-details-primary"
  >
    <div
      className="measure-details-metric"
    >
      <IssueTypeIcon
        className="little-spacer-right text-text-bottom"
        query="reliability_rating"
      />
      Reliability Rating
      <span
        className="measure-details-value spacer-left"
      >
        <strong>
          <Measure
            metricKey="reliability_rating"
            metricType="RATING"
          />
        </strong>
      </span>
      <Tooltip
        overlay="component_measures.show_metric_history"
      >
        <ForwardRef(Link)
          className="js-show-history spacer-left button button-small"
          to={
            {
              "pathname": "/project/activity",
              "search": "?id=foo&graph=custom&custom_metrics=reliability_rating",
            }
          }
        >
          <HistoryIcon />
        </ForwardRef(Link)>
      </Tooltip>
    </div>
    <div
      className="measure-details-primary-actions"
    >
      <injectIntl(LeakPeriodLegend)
        className="spacer-left"
        component={
          {
            "key": "foo",
            "name": "Foo",
            "qualifier": "TRK",
          }
        }
        period={
          {
            "date": "2017-05-16T13:50:02+0200",
            "index": 1,
            "mode": "previous_version",
            "parameter": "6,4",
          }
        }
      />
    </div>
  </div>
</div>
`;
